@startuml
'https://plantuml.com/class-diagram

class Main {
+ public static void main(String args[])
}
package entities {
    class Motivation {
    - String motivationTitle
    - String motivationText
    - String imageURL
    - int motivationId
    - int authotId
    + public Motivation(String motivationTitle, String motivationBody)
    + public Motivation(String title, String text, String imageURL)
    + getMotivationName()
    + getMotivationText()
    + getMotivationImageURL()
    + getMotivationId()
    + getAuthorId()
    }
}
package persistance {
    class MotivationMapper {
    + void newMotivation(String motivationTitle, String motivationText,  String imageURL, User user, Conection pool)
    + void deleteMotivation(int motivationId)
    + Motivation getMotivation()
    + List<Motivation> getMotivations()
    + addToFavorites()
    + getFavoriteMotivation()
    +deleteFromFavorite()
    }
}
package controllers {
    class MotivationController {
    + void addRoutes()
    + void addMotivation()
    + void showMotivation()
    }
}
Main *-- MotivationController
MotivationController o-- Motivation
@enduml